--- a/app/index.html
+++ b/app/index.html
@@ -33,25 +33,48 @@
     <header>
     <div class="container principal-bannerWrapper">
       <div class="principal-banner">
-        <div layout="row" layout-align="center center" layout-padding>
-          <div flex="60" flex-xs = "100">
-         <h1 lass="md-display-4"><b>SEU</b> aluguel de forma <b>FÁCIL</b> e descomplicada</h1>
+        <div layout="row" layout-align="center center">
+          <div flex="60" flex-xs = "100" style="text-align: center;">
+         <h1 class="md-display-2"><b>SEU</b> aluguel de forma <b>FÁCIL</b> e descomplicada</h1>
        </div>
         </div>
 
         <div layout="row" layout-align="center center">
-            <div flex="50">
-                <md-icon md-svg-src="./assets/svg/key.svg" class="icon10" aria-label="Android "> </md-icon>
+            <div flex="50" style="text-align: center;">
+                <md-icon md-svg-src="./assets/svg/padlock.svg" class="icon10" aria-label="Android "> </md-icon>
                 <p class="tam-3"> titulo de captalização</p>
             </div>
-            <div flex="50">
+            <div flex="50" style="text-align: center;">
                 <md-icon md-svg-src="./assets/svg/key.svg" class="icon10" aria-label="Android "> </md-icon>
-                <p class="tam-3"> titulo de captalização</p>
+                <p class="tam-3"> seguro fiança</p>
             </div>
         </div>
     </div>
   </div>
     </header>
+
+    <section id="praQueFiador">
+      <div class="container">
+        <div layout="row" layout-align="center center">
+             <h1 class="md-display-3"><b><u>pra que fiador ?</u></b></h1>
+          </div>
+
+        <div flex layout="row" style="text-align: center;">
+           <p class="tam-3"><b> Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</b></p>
+        </div>
+
+        <div layout="row" layout-align="center center">
+              <div flex="50" style="text-align: center;">
+                  <md-icon md-svg-src="./assets/svg/padlock.svg" class="icon5" aria-label="Android "> </md-icon>
+                  <p class="tam-3"> titulo de captalização</p>
+              </div>
+              <div flex="50" style="text-align: center;">
+                  <md-icon md-svg-src="./assets/svg/key.svg" class="icon5" aria-label="Android "> </md-icon>
+                  <p class="tam-3"> seguro fiança</p>
+              </div>
+          </div>
+      </div>      
+    </section>
     
 
     <!-- Bibliotecas Angular-Material -->
