--- a/app/index.html
+++ b/app/index.html
@@ -57,10 +57,12 @@
       <div class="container">
         <div layout="row" layout-align="center center">
              <h1 class="md-display-3"><b><u>pra que fiador ?</u></b></h1>
-          </div>
+        </div>
 
-        <div flex layout="row" style="text-align: center;">
-           <p class="tam-3"><b> Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</b></p>
+        <div layout="row" layout-align="center center">
+          <div flex="80" flex-md="50" flex-xs="100">
+            <p class="tam-3"><b> Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</b></p>
+           </div>
         </div>
 
         <div layout="row" layout-align="center center">
@@ -73,6 +75,57 @@
                   <p class="tam-3"> seguro fiança</p>
               </div>
           </div>
+      </div>      
+    </section>
+
+    <section id="tituloCaptalizacao">
+      <div class="container">
+        <div layout="row" layout-xs="column" layout-align="center center" layout-padding>
+        <div flex="40" flex-xs="100" style="text-align: center;">
+          <md-icon md-svg-src="./assets/svg/padlock-white.svg" class="icon5" aria-label="Android "> </md-icon>
+            <p class="tam-3 text-white"> titulo de captalização</p>
+
+            <p class="tam-3 text-left text-white" style="text-align: left;">
+            Ideal para quem quer alugar imóveis
+            comerciais e residenciais. Não há a
+            necessidade de análise de crédito, com
+            processo rápido e sem burocracia.
+            Você realiza a contratação do
+            Título de Capitalização no momento da 
+            assinatura do seu contrato de aluguel,
+            e ao final do período de permanência, você
+            recebe todo o dinheiro de volta e
+            corrigido pela TR.</p>
+        </div>
+
+        <div flex="30" flex-xs="100">
+          <md-list>
+            <md-list-item class="tam-3 text-white">sem burocracia</md-list-item>
+            <md-list-item class="tam-3 text-white">sem análise de crédito</md-list-item>
+            <md-list-item class="tam-3 text-white">sem comprovante de renda</md-list-item>
+            <md-list-item class="tam-3 text-white">processo rápido</md-list-item>
+            <md-list-item class="tam-3 text-white">resgate de 100% do valor, corrigido pela TR.</md-list-item>
+
+          </md-list>      
+        </div>
+
+        <div flex="30" flex-xs="100">
+        <img src="./assets/img/seu_dinheiro_devolta.png" id="img_din">
+        </div>
+
+
+        </div>
+      </div>      
+    </section>
+
+    <section id="seguroFianca">
+      <div class="container">
+        <div layout="row" layout-align="center center">
+        <div flex="50">
+          dfdfdfdf
+        </div>
+
+        </div>
       </div>      
     </section>
     
