--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
     <link rel='stylesheet' href='assets/fonte.css'>
-    <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css"/>
+    <link rel="stylesheet" href="../node_modules/angular-material/angular-material.min.css"/>
     <link rel="stylesheet" href="assets/app.css"/>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"/>
 
@@ -221,10 +221,10 @@
     
 
     <!-- Bibliotecas Angular-Material -->
-    <script src="../node_modules/angular/angular.js"></script>
-    <script src="../node_modules/angular-animate/angular-animate.js"></script>
-    <script src="../node_modules/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
+    <script src="../node_modules/angular/angular.min.js"></script>
+    <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
+    <script src="../node_modules/angular-aria/angular-aria.min.js"></script>
+    <script type="text/javascript" src="../node_modules/angular-material/angular-material.min.js"></script>
 
     <!-- Bibliotecas Jquery + Boostrap -->
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
