--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt_br" >
   <head>
-    <title>Angular Material - Starter App</title>
+    <title>Garantia Aluguel</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-    <link rel='stylesheet' href='assets/fonte.css'>
+    <link rel='stylesheet' href='assets/fontes/fonte.css'>
     <link rel="stylesheet" href="../node_modules/angular-material/angular-material.min.css"/>
     <link rel="stylesheet" href="assets/app.css"/>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"/>
@@ -41,12 +41,16 @@
 
         <div layout="row" layout-align="center center">
             <div flex="50" style="text-align: center;">
+              <a href="#tituloCaptalizacao">
                 <md-icon md-svg-src="./assets/svg/padlock.svg" class="icon10" aria-label="Android "> </md-icon>
-                <p class="tam-3"> titulo de captalização</p>
+              </a>
+                <p class="tam-3 neoSansMedium"> titulo de captalização</p>
             </div>
             <div flex="50" style="text-align: center;">
+              <a href="#seguroFianca">
                 <md-icon md-svg-src="./assets/svg/key.svg" class="icon10" aria-label="Android "> </md-icon>
-                <p class="tam-3"> seguro fiança</p>
+              </a>
+                <p class="tam-3 neoSansMedium"> seguro fiança</p>
             </div>
         </div>
     </div>
@@ -54,28 +58,34 @@
     </header>
 
     <section id="praQueFiador">
-      <div class="container">
-        <div layout="row" layout-align="center center">
-             <h1 class="md-display-3"><b><u>pra que fiador ?</u></b></h1>
+      <div layout="row" layout-xs="column">
+        <div flex="30" flex-xs="100">
+          <img src="./assets/img/fiador_nunca.png" id="imgFiadorNunca">
         </div>
 
-        <div layout="row" layout-align="center center">
-          <div flex="90" flex-md="50" flex-xs="100">
-            <p class="tam-3"><b> Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</b></p>
-           </div>
+        <div flex="40" flex-xs="100" layout-padding>
+          <h1 class="md-display-3 neoSansUltra" style="text-align: center;"><b><u>Pra que fiador ?</u></b></h1>
+
+          <p class="tam-3 neoSansRegular" style="text-align: center;"><b> Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</b></p>
         </div>
 
-        <div layout="row" layout-align="center center">
-              <div flex="50" style="text-align: center;">
-                  <md-icon md-svg-src="./assets/svg/padlock.svg" class="icon5" aria-label="Android "> </md-icon>
-                  <p class="tam-3"> titulo de captalização</p>
-              </div>
-              <div flex="50" style="text-align: center;">
-                  <md-icon md-svg-src="./assets/svg/key.svg" class="icon5" aria-label="Android "> </md-icon>
-                  <p class="tam-3"> seguro fiança</p>
-              </div>
-          </div>
-      </div>      
+        <div flex="30" hide-xss></div>
+
+      </div>     
+        
+        <div class="container">
+          <div layout="row" layout-align="center center">
+                <div flex="50" style="text-align: center;">
+                    <md-icon md-svg-src="./assets/svg/padlock.svg" class="icon5" aria-label="Android "> </md-icon>
+                    <p class="tam-3 neoSansMedium"> titulo de captalização</p>
+                </div>
+                <div flex="50" style="text-align: center;">
+                    <md-icon md-svg-src="./assets/svg/key.svg" class="icon5" aria-label="Android "> </md-icon>
+                    <p class="tam-3 neoSansMedium"> seguro fiança</p>
+                </div>
+            </div>
+        </div>
+         
     </section>
 
     <section id="tituloCaptalizacao">
@@ -182,9 +192,9 @@
     </section>
 
     <section id="alugueEm3Passos">
-          <div layout="row" layout-align="center center">
+          <div layout="row" layout-align="center center" layout-padding>
             <h1 class="md-display-3" style="text-align: center;">
-              <b><u>alugue em apenas 3 passos!</u></b>
+              <b><u>Alugue em apenas 3 passos!</u></b>
             </h1>
           </div>
 
