--- a/app/index.html
+++ b/app/index.html
@@ -59,17 +59,23 @@
 
     <section id="praQueFiador">
       <div layout="row" layout-xs="column">
-        <div flex="30" flex-xs="100">
+        <div flex="20" flex-xs="100">
           <img src="./assets/img/fiador_nunca.png" id="imgFiadorNunca">
         </div>
 
-        <div flex="40" flex-xs="100" layout-padding>
+        <div flex="10" hide-xs style="padding-top: 10%">
+           <img src="./assets/img/logo.png" style="max-width: 80%">
+        </div>
+
+        <div flex="50" flex-xs="100" layout-padding>
           <h1 class="md-display-3 neoSansUltra" style="text-align: center;"><b><u>Pra que fiador ?</u></b></h1>
 
           <p class="tam-3 neoSansRegular" style="text-align: center;"><b> Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</b></p>
         </div>
 
-        <div flex="30" hide-xss></div>
+        <div flex="10" hide-xs style="padding-top: 7%">
+          <img src="./assets/img/logo.png" class="img-responsive">
+        </div>
 
       </div>     
         
