--- a/app/index.html
+++ b/app/index.html
@@ -59,15 +59,15 @@
 
     <section id="praQueFiador">
       <div layout="row" layout-xs="column">
-        <div flex="20" flex-xs="100">
+        <div flex="15" flex-xs="100">
           <img src="./assets/img/fiador_nunca.png" id="imgFiadorNunca">
         </div>
 
-        <div flex="10" hide-xs style="padding-top: 10%">
-           <img src="./assets/img/logo.png" style="max-width: 80%">
+        <div flex="5" hide-xs style="padding-top: 10%">
+           <img src="./assets/img/logo.png" class="img-responsive">
         </div>
 
-        <div flex="50" flex-xs="100" layout-padding>
+        <div flex="70" flex-xs="100" layout-padding>
           <h1 class="md-display-3 neoSansUltra" style="text-align: center;"><b><u>Pra que fiador ?</u></b></h1>
 
           <p class="tam-3 neoSansRegular" style="text-align: center;"><b> Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</b></p>
@@ -97,7 +97,7 @@
     <section id="tituloCaptalizacao">
       
         <div layout="row" layout-xs="column" layout-align="center center" layout-padding>
-        <div flex="30" flex-xs="100" style="text-align: center;">
+        <div flex="35" flex-xs="100" style="text-align: center;">
           <md-icon md-svg-src="./assets/svg/padlock-white.svg" class="icon10" aria-label="Android "> </md-icon>
             <p class="tam-2 text-white"> titulo de captalização</p>
 
@@ -139,7 +139,7 @@
           </md-list>      
         </div>
 
-        <div flex="30" flex-xs="100">
+        <div flex="35" flex-xs="100">
         <img src="./assets/img/seu_dinheiro_devolta.png" id="img_din">
         </div>
 
@@ -151,7 +151,7 @@
     <section id="seguroFianca">
         <div layout="row" layout-xs="column" layout-align="center center" layout-padding>
 
-        <div flex="40" flex-xs="100">
+        <div flex="35" flex-xs="100">
           <img src="./assets/img/seguranca_garantia.png" id="img_din">
         </div>
 
@@ -179,7 +179,7 @@
 
           </md-list>      
         </div>
-          <div flex="30" flex-xs="100" style="text-align: center;">
+          <div flex="35" flex-xs="100" style="text-align: center;">
             <md-icon md-svg-src="./assets/svg/key-white.svg" class="icon10" aria-label="Android "> </md-icon>
               <p class="tam-2 text-white"> seguro fiança</p>
 
