--- a/app/index.html
+++ b/app/index.html
@@ -114,35 +114,36 @@
             corrigido pela TR.</p>
         </div>
 
-        <div flex="30" flex-xs="100">
-          <md-list>
-            <md-list-item class="tam-3 text-white">
-              <span class="glyphicon glyphicon-ok"></span>sem burocracia
+        <div layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
+          <div flex="30" flex-xs="100">
+            <md-list>
+              <md-list-item class="tam-3 text-white">
+                <span class="glyphicon glyphicon-ok"></span>sem burocracia
+              </md-list-item>
+
+              <md-list-item class="tam-3 text-white">
+              <span class="glyphicon glyphicon-ok"></span>sem análise de crédito
             </md-list-item>
 
-            <md-list-item class="tam-3 text-white">
-            <span class="glyphicon glyphicon-ok"></span>sem análise de crédito
-          </md-list-item>
+              <md-list-item class="tam-3 text-white">
+              <span class="glyphicon glyphicon-ok"></span>sem comprovante de renda
+            </md-list-item>
 
-            <md-list-item class="tam-3 text-white">
-            <span class="glyphicon glyphicon-ok"></span>sem comprovante de renda
-          </md-list-item>
+              <md-list-item class="tam-3 text-white">
+              <span class="glyphicon glyphicon-ok"></span>processo rápido
+            </md-list-item>
 
-            <md-list-item class="tam-3 text-white">
-            <span class="glyphicon glyphicon-ok"></span>processo rápido
-          </md-list-item>
+              <md-list-item class="tam-3 text-white">
+              <span class="glyphicon glyphicon-ok"></span>resgate de 100% do valor, corrigido pela TR.
+            </md-list-item>
 
-            <md-list-item class="tam-3 text-white">
-            <span class="glyphicon glyphicon-ok"></span>resgate de 100% do valor, corrigido pela TR.
-          </md-list-item>
+            </md-list>      
+          </div>
 
-          </md-list>      
+          <div flex="35" flex-xs="100" style="text-align: center;">
+            <img src="./assets/img/seu_dinheiro_devolta.png" id="img_din">
+          </div>
         </div>
-
-        <div flex="35" flex-xs="100">
-        <img src="./assets/img/seu_dinheiro_devolta.png" id="img_din">
-        </div>
-
 
         </div>
           
@@ -151,6 +152,7 @@
     <section id="seguroFianca">
         <div layout="row" layout-xs="column" layout-align="center center" layout-padding>
 
+      <div layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
         <div flex="35" flex-xs="100">
           <img src="./assets/img/seguranca_garantia.png" id="img_din">
         </div>
@@ -179,6 +181,8 @@
 
           </md-list>      
         </div>
+      </div>
+      
           <div flex="35" flex-xs="100" style="text-align: center;">
             <md-icon md-svg-src="./assets/svg/key-white.svg" class="icon10" aria-label="Android "> </md-icon>
               <p class="tam-2 text-white"> seguro fiança</p>
@@ -199,7 +203,7 @@
 
     <section id="alugueEm3Passos">
           <div layout="row" layout-align="center center" layout-padding>
-            <h1 class="md-display-3" style="text-align: center;">
+            <h1 class="md-display-3 neoSansUltra" style="text-align: center;">
               <b><u>Alugue em apenas 3 passos!</u></b>
             </h1>
           </div>
@@ -222,7 +226,7 @@
 
         <div layout="row" layout-align="center center" layout-padding>
           <div flex="60" flex-xs="100">
-           <p class="tam-3 text-center">Sua locação muito mais fácil e sem burocracia. Você precisa apenas escolher o imóvel, enviar seus documentos e assinar seu contrato de aluguel. E o melhor de tudo, sem pedir favor a ninguém e com toda garantia e segurança.</p>
+           <p class="tam-3 text-center neoSansRegular">Sua locação muito mais fácil e sem burocracia. Você precisa apenas escolher o imóvel, enviar seus documentos e assinar seu contrato de aluguel. E o melhor de tudo, sem pedir favor a ninguém e com toda garantia e segurança.</p>
           </div>
         </div>
 
