botoes em layout row

--- a/app/index.html
+++ b/app/index.html
@@ -208,7 +208,7 @@
             </h1>
           </div>
 
-          <div layout="row" layout-xs="column" layout-align="center center" layout-padding>
+          <div layout="row" layout-align="center center" layout-padding>
             
             <!-- Btn01 -->
               <div flex="30" flex-xs="100">
