--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
     <section id="tituloCaptalizacao">
       
         <div layout="row" layout-xs="column" layout-align="center start" layout-padding>
-        <div layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
+        <div layout="column" layout-lg="row" layout-gt-lg="row">
           <div flex="35" flex-xs="100">
               <img src="./assets/img/seu_dinheiro_devolta.png" class="img-locacao">
           </div>
@@ -121,7 +121,7 @@
             </md-list-item>
 
               <md-list-item class="tam-3 text-white">
-              <span class="glyphicon glyphicon-ok"></span>resgate de 100% do valor, corrigido pela TR.
+              <span class="glyphicon glyphicon-ok"></span>resgate de 100% do valor,<br/> corrigido pela TR.
             </md-list-item>
 
             </md-list>      
@@ -152,7 +152,7 @@
     <section id="seguroFianca">
     
       <div layout="row" layout-xs="column" layout-align="center start" layout-padding>
-      <div layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
+      <div layout="column" layout-lg="row" layout-gt-lg="row">
         <div flex="35" flex-xs="100">
           <img src="./assets/img/seguranca_garantia.png" class="img-locacao">
         </div>
