--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
     </section>
 
     <section id="tituloCaptalizacao">
-        <div layout="row" layout-xs="column" layout-align="center end" layout-padding>
+        <div layout="row" layout-xs="column" layout-align="center start" layout-padding>
           <div flex="35" flex-xs="100" style="text-align: center;">
           <md-icon md-svg-src="./assets/svg/padlock-white.svg" class="icon10" aria-label="Android "> </md-icon>
             <p class="tam-2 text-white"> titulo de captalização</p>
@@ -113,7 +113,7 @@
             corrigido pela TR.</p>
         </div>      
 
-        <div layout="column" layout-lg="row" layout-gt-lg="row">
+        <div layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
           <div flex="30" flex-xs="100">
             <md-list>
               <md-list-item class="tam-3 text-white">
@@ -150,8 +150,8 @@
     </section>
 
     <section id="seguroFianca">
-      <div layout="row" layout-xs="column" layout-align="center end" layout-padding>
-        <div flex="35" flex-xs="100" style="text-align: center;">
+      <div layout="row" layout-xs="column" layout-align="center start" layout-padding>
+        <div flex="35" flex-xs="100" style="text-align: center;" flex-order-gt-md="3">
             <md-icon md-svg-src="./assets/svg/key-white.svg" class="icon10" aria-label="Android "> </md-icon>
               <p class="tam-2 text-white"> seguro fiança</p>
 
@@ -166,8 +166,8 @@
               assistências e cobertuas exclusivas.</p>
           </div>
 
-      <div layout="column" layout-lg="row" layout-gt-lg="row">
-        <div flex="30" flex-xs="100">
+      <div layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
+        <div flex="30" flex-xs="100" flex-order-gt-md="2">
           <md-list>
             <md-list-item class="tam-3 text-white">
               <span class="glyphicon glyphicon-ok"></span>pagamento parcelado
@@ -192,7 +192,7 @@
           </md-list>      
         </div>
 
-        <div flex="35" flex-xs="100">
+        <div flex="35" flex-xs="100" flex-order-gt-md="1">
           <img src="./assets/img/seguranca_garantia.png" class="img-locacao">
         </div>
 
