--- a/app/index.html
+++ b/app/index.html
@@ -236,7 +236,7 @@
     </section>
 
       <!-- Botão ir para o topo -->
-      <md-button class="md-fab md-mini btn-go-top" ng-click="gotoTop()">
+      <md-button class="md-fab btn-go-top" ng-click="gotoTop()">
             <md-icon md-svg-src="./assets/svg/ic_arrow_up_24px.svg"></md-icon>
       </md-button>
   
