Trocadas os svg pelos png

--- a/app/index.html
+++ b/app/index.html
@@ -34,20 +34,20 @@
       <div class="principal-banner">
         <div layout="row" layout-align="center center">
           <div flex="60" flex-xs = "100" style="text-align: center;">
-         <h1 class="md-display-2"><b>SEU</b> aluguel de forma <b>FÁCIL</b> e descomplicada</h1>
+         <h1 class="md-display-2 impact"><strong>SEU</strong> aluguel de forma <strong>FÁCIL</strong> e descomplicada</h1>
        </div>
         </div>
 
         <div layout="row" layout-align="center center">
             <div flex="50" style="text-align: center;">
               <a href="#tituloCaptalizacao">
-                <md-icon md-svg-src="./assets/svg/padlock.svg" class="icon10" aria-label="Android "> </md-icon>
+                <img src="./assets/img/padlock.png" class="icon10">
               </a>
                 <p class="tam-3 neoSansMedium"> titulo de captalização</p>
             </div>
             <div flex="50" style="text-align: center;">
               <a href="#seguroFianca">
-                <md-icon md-svg-src="./assets/svg/key.svg" class="icon10" aria-label="Android "> </md-icon>
+                <img src="./assets/img/key.png" class="icon10">
               </a>
                 <p class="tam-3 neoSansMedium"> seguro fiança</p>
             </div>
@@ -81,7 +81,11 @@
             <md-icon md-svg-src="./assets/svg/ic_arrow_up_24px.svg"></md-icon>
       </md-button>
   
-    <footer></footer>
+    <footer>
+      <div layout="row" layout-align="center center" layout-padding>
+        <img src="./assets/img/logo-rodape.png">
+      </div>
+    </footer>
     
 
     <!-- Bibliotecas Angular-Material -->
