--- a/app/index.html
+++ b/app/index.html
@@ -32,18 +32,20 @@
     <header>
     <div class="container principal-bannerWrapper">
       <div class="principal-banner">
+
+      <div id="borda-icones"></div>
         <div layout="row" layout-align="center center">
-          <div flex="60" flex-xs = "100" style="text-align: center;">
+          <div flex="40" flex-xs = "50" style="text-align: center;">
          <h1 class="md-display-2 impact"><strong>SEU</strong> aluguel de forma <strong>FÁCIL</strong> e descomplicada</h1>
        </div>
         </div>
 
-        <div layout="row" layout-align="center center">
+        <div layout="row" layout-align="space-between center">
             <div flex="50" style="text-align: center;">
               <a href="#tituloCaptalizacao">
                 <img src="./assets/img/padlock.png" class="icon10">
               </a>
-                <p class="tam-3 neoSansMedium"> titulo de captalização</p>
+                <p class="tam-3 neoSansMedium"> título de capitalização</p>
             </div>
             <div flex="50" style="text-align: center;">
               <a href="#seguroFianca">
@@ -52,6 +54,8 @@
                 <p class="tam-3 neoSansMedium"> seguro fiança</p>
             </div>
         </div>
+     
+
     </div>
   </div>
     </header>
