conclução das alterações solicitadas

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,9 @@
     <div class="container principal-bannerWrapper">
       <div class="principal-banner">
 
+      <!-- renderiza uma borda sobre os icones -->
       <div id="borda-icones"></div>
+
         <div layout="row" layout-align="center center">
           <div flex="40" flex-xs = "50" style="text-align: center;">
          <h1 class="md-display-2 impact"><strong>SEU</strong> aluguel de forma <strong>FÁCIL</strong> e descomplicada</h1>
