--- a/app/index.html
+++ b/app/index.html
@@ -44,13 +44,13 @@
 
         <div layout="row" layout-align="space-between center">
             <div flex="50" style="text-align: center;">
-              <a href="#tituloCaptalizacao">
+              <a ng-click="goTo('tituloCaptalizacao')" role="button">
                 <img src="./assets/img/padlock.png" class="icon10">
               </a>
                 <p class="tam-3 neoSansMedium"> título de capitalização</p>
             </div>
             <div flex="50" style="text-align: center;">
-              <a href="#seguroFianca">
+              <a ng-click="goTo('seguroFianca')" role="button">
                 <img src="./assets/img/key.png" class="icon10">
               </a>
                 <p class="tam-3 neoSansMedium"> seguro fiança</p>
