input type = "tel"

--- a/app/index.html
+++ b/app/index.html
@@ -119,12 +119,12 @@
   
     <md-input-container class="md-block">
       <label>Telefone</label>
-      <input type="number">
+      <input type="tel">
     </md-input-container>
   
     <md-input-container class="md-block">
       <label>Celular</label>
-      <input type="number">
+      <input type="tel">
     </md-input-container>
 
     <!-- DADOS DO IMÓVEL ALUGADO -->
