--- a/app/indexOld.html
+++ b/app/indexOld.html
@@ -103,6 +103,7 @@
 
     <!-- Bibliotecas Jquery + Boostrap -->
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="../node_modules/jquery.maskedinput/src/jquery.maskedinput.js"></script>
     <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="./src/app.js"></script>
