--- a/app/indexOld.html
+++ b/app/indexOld.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../node_modules/angular-material/angular-material.min.css"/>
     <link rel="stylesheet" href="assets/app.css"/>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css"/>
 
     <style type="text/css">
         /**
@@ -106,6 +107,8 @@
     <script type="text/javascript" src="../node_modules/jquery.maskedinput/src/jquery.maskedinput.js"></script>
     <script type="text/javascript" src="../node_modules/jquery-maskmoney/dist/jquery.maskMoney.min.js"></script>
     <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+     <script type="text/javascript" src="../node_modules/bootstrap-datepicker/dist/locales/bootstrap-datepicker.pt-BR.min.js"></script>
 
     <script src="./src/app.js"></script>
     <script src="./src/diretiva/diretiva.js"></script>
