--- a/app/index.html
+++ b/app/index.html
@@ -61,8 +61,6 @@
   </div>
 
 <div class="borda-formulario">
-<form name="formCad">
-  
 
   	<!-- DADOS DO PRTENDENTE -->
   	<div ng-if="passo == 1" class="animate-if" data-ng-include="'./src/view/formulario/dadosPretendente.html'"></div>  
@@ -84,7 +82,6 @@
 
 
 </div>
-</form>
 
   <div layout="row" layout-align="center center">
     <div>
@@ -118,6 +115,7 @@
     <script src="./src/app.js"></script>
     <script src="./src/diretiva/diretiva.js"></script>
     <script src="./src/service/ServiceUtil.js"></script>
+    <script src="./src/service/ValidaService.js"></script>
     <script src="./src/main/MainController.js"></script>
     <script type="text/javascript">
 
