--- a/app/indexOld.html
+++ b/app/indexOld.html
@@ -97,6 +97,7 @@
 
     <!-- Bibliotecas Angular-Material -->
     <script src="../node_modules/angular/angular.min.js"></script>
+    <script src="../node_modules/angular-locale-pt-br/angular-locale_pt-br.js"></script>
     <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="../node_modules/angular-aria/angular-aria.min.js"></script>
     <script src="../node_modules/angular-file-upload/dist/angular-file-upload.min.js"></script>
