--- a/app/index.html
+++ b/app/index.html
@@ -84,8 +84,9 @@
 </div>
 
   <div layout="row" layout-align="center center">
-    <div>
-      <md-button class="md-raised" ng-click="passoAnterior()"><span aria-hidden="true">&larr;</span> Anterior
+    <div ng-if="passo != 1">
+      <md-button class="md-raised" ng-click="passoAnterior()">
+        <span aria-hidden="true">&larr;</span> Anterior
       </md-button>
     </div>
 
@@ -99,6 +100,7 @@
 
     <!-- Bibliotecas Angular-Material -->
     <script src="../node_modules/angular/angular.min.js"></script>
+    <script src="../node_modules/angular-locale-pt-br/angular-locale_pt-br.js"></script>
     <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="../node_modules/angular-aria/angular-aria.min.js"></script>
     <script src="../node_modules/angular-file-upload/dist/angular-file-upload.min.js"></script>
